--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>History Fair</title>
+    <html lang="en-US">
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="assets/main.css" />
+  </head>
   <body>
     <center>
       <p>Hello</p>
