--- a/index.html
+++ b/index.html
@@ -6,9 +6,72 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" />
   </head>
-  <body>
-    <center>
-      <p>Hello</p>
-    </center>
+	<body class="light serif loaded">
+	  	<div id="container" class="container font-size5">
+				<div style="display: block;" id="reader-header" class="header">
+	      <a href="#" id="reader-domain" class="domain">kyrin.science.2016</a>
+	      <div class="domain-border"></div>
+	      <h1 id="reader-title">Header and title of page</h1>
+	      <div id="reader-credits" class="credits">Written by: Kota</div>
+	    </div>
+			<div class="content">
+				<div style="display: block;" id="moz-reader-content">
+					<section class="entry-content clearfix">
+						<p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum nisl
+eget nisl eleifend, vel ultrices sem congue. Phasellus faucibus dictum fermentum.
+Etiam dapibus ligula nec congue pellentesque. Aenean ornare venenatis enim, nec
+cursus ante varius consectetur. Quisque ante nibh, aliquam vitae lectus at,
+tempor viverra justo. Morbi vitae aliquam sapien. Aenean feugiat, mauris ut tempus
+mattis, quam augue pharetra sem, feugiat porta tortor neque in est. Donec mattis
+venenatis nisi eget accumsan. Integer pellentesque lacus magna, vitae consequat
+felis rhoncus in.
+
+Praesent laoreet, ante et mattis posuere, metus velit pharetra sem, at auctor
+purus purus vel erat. Maecenas pharetra vehicula ex, a tempus leo mattis quis.
+Donec ac lectus augue. Aliquam ultricies nec leo venenatis posuere. Nam rutrum
+nunc quis facilisis sodales. Curabitur lobortis ac leo sit amet mollis.
+Suspendisse pulvinar urna urna, vitae posuere quam luctus in. Proin viverra odio
+eu quam iaculis, at pharetra turpis elementum.
+
+Aenean a laoreet arcu. Nulla quis rhoncus sem, bibendum facilisis mauris.
+Nullam a eros eu nisl lacinia euismod. Praesent rhoncus nibh nisl, ut ultrices
+ipsum ullamcorper eget. Praesent tempus accumsan varius. Vestibulum at enim mollis
+sapien pulvinar suscipit. Nunc in aliquam magna. Phasellus vulputate felis quis
+diam porttitor, a finibus dui scelerisque. Aenean condimentum nunc velit, a
+ullamcorper diam ultricies at. Maecenas iaculis justo vel ligula hendrerit finibus.
+Donec vitae enim sapien. Nulla hendrerit malesuada purus, ac aliquam lorem semper
+sit amet. In varius tempus quam, eget ornare lectus laoreet non. Aliquam ut
+imperdiet ex, non fermentum tortor. Phasellus tellus lorem, tempus vitae scelerisque
+ut, posuere eget ligula. Vivamus lacinia feugiat erat eget fringilla.
+
+Curabitur tempus tempor interdum. In finibus dui ut lacus vehicula venenatis.
+Phasellus elit est, pellentesque et ultricies et, sodales at sapien. Donec eu
+dolor nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+posuere cubilia Curae; Sed sagittis vehicula vestibulum. Suspendisse eget mi
+libero. Cras cursus augue ex, eu suscipit elit interdum eget. Morbi arcu mauris,
+consectetur non consectetur eu, dapibus ut est. Nam porta velit non quam rutrum
+pellentesque. Praesent aliquam ornare augue, at faucibus enim varius et. In
+pharetra libero eu ante porttitor viverra. Duis a purus eget enim venenatis
+porta a eget ante. Duis sed cursus risus, quis mattis purus. Aliquam ornare
+suscipit neque, at luctus nunc pulvinar vel. Donec venenatis auctor elit, non
+scelerisque diam.
+
+Maecenas cursus blandit mauris, et convallis eros aliquet ac. Maecenas imperdiet
+lectus sed arcu iaculis, non feugiat nulla rutrum. Duis pharetra suscipit tempor.
+Sed vulputate et metus ac rhoncus. Nullam scelerisque ante a velit scelerisque
+facilisis. Curabitur non odio magna. Suspendisse at euismod nunc, non scelerisque
+purus. Phasellus eget sem a felis tincidunt mollis nec ut sem. Fusce accumsan
+gravida elementum. Suspendisse dolor dui, pretium vitae vehicula at, commodo vel
+magna. Integer ligula nisl, placerat sit amet consectetur eu, ullamcorper ut
+nunc. Praesent commodo odio risus, vel ultrices risus dictum et. In vel elementum
+nisi. Suspendisse eget dui id diam porttitor dapibus. Aliquam eget vulputate enim,
+ut vulputate neque. 
+						</p>
+					</section>
+				</div>
+			</div>
+    </div>
+		</div>
   </body>
 </html>
