added actual text

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
+<!-- KOTA -->
+<!-- Unlicense 2016-->
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>History Fair</title>
+		<title>History Fair 2016</title>
     <html lang="en-US">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" />
@@ -9,69 +11,91 @@
 	<body class="light serif loaded">
 	  	<div id="container" class="container font-size5">
 				<div style="display: block;" id="reader-header" class="header">
-	      <a href="#" id="reader-domain" class="domain">kyrin.science.2016</a>
+	      <a href="#" id="reader-domain" class="domain">Histor Fair 2016</a>
 	      <div class="domain-border"></div>
-	      <h1 id="reader-title">Header and title of page</h1>
-	      <div id="reader-credits" class="credits">Written by: Kota</div>
+	      <h1 id="reader-title">Juan Ponce de Leon, Explorer and Govenor</h1>
+	      <div id="reader-credits" class="credits">Written by: Kyrin Van Jura</div>
 	    </div>
 			<div class="content">
 				<div style="display: block;" id="moz-reader-content">
 					<section class="entry-content clearfix">
-						<p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum nisl
-eget nisl eleifend, vel ultrices sem congue. Phasellus faucibus dictum fermentum.
-Etiam dapibus ligula nec congue pellentesque. Aenean ornare venenatis enim, nec
-cursus ante varius consectetur. Quisque ante nibh, aliquam vitae lectus at,
-tempor viverra justo. Morbi vitae aliquam sapien. Aenean feugiat, mauris ut tempus
-mattis, quam augue pharetra sem, feugiat porta tortor neque in est. Donec mattis
-venenatis nisi eget accumsan. Integer pellentesque lacus magna, vitae consequat
-felis rhoncus in.
-
-Praesent laoreet, ante et mattis posuere, metus velit pharetra sem, at auctor
-purus purus vel erat. Maecenas pharetra vehicula ex, a tempus leo mattis quis.
-Donec ac lectus augue. Aliquam ultricies nec leo venenatis posuere. Nam rutrum
-nunc quis facilisis sodales. Curabitur lobortis ac leo sit amet mollis.
-Suspendisse pulvinar urna urna, vitae posuere quam luctus in. Proin viverra odio
-eu quam iaculis, at pharetra turpis elementum.
-
-Aenean a laoreet arcu. Nulla quis rhoncus sem, bibendum facilisis mauris.
-Nullam a eros eu nisl lacinia euismod. Praesent rhoncus nibh nisl, ut ultrices
-ipsum ullamcorper eget. Praesent tempus accumsan varius. Vestibulum at enim mollis
-sapien pulvinar suscipit. Nunc in aliquam magna. Phasellus vulputate felis quis
-diam porttitor, a finibus dui scelerisque. Aenean condimentum nunc velit, a
-ullamcorper diam ultricies at. Maecenas iaculis justo vel ligula hendrerit finibus.
-Donec vitae enim sapien. Nulla hendrerit malesuada purus, ac aliquam lorem semper
-sit amet. In varius tempus quam, eget ornare lectus laoreet non. Aliquam ut
-imperdiet ex, non fermentum tortor. Phasellus tellus lorem, tempus vitae scelerisque
-ut, posuere eget ligula. Vivamus lacinia feugiat erat eget fringilla.
-
-Curabitur tempus tempor interdum. In finibus dui ut lacus vehicula venenatis.
-Phasellus elit est, pellentesque et ultricies et, sodales at sapien. Donec eu
-dolor nibh. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-posuere cubilia Curae; Sed sagittis vehicula vestibulum. Suspendisse eget mi
-libero. Cras cursus augue ex, eu suscipit elit interdum eget. Morbi arcu mauris,
-consectetur non consectetur eu, dapibus ut est. Nam porta velit non quam rutrum
-pellentesque. Praesent aliquam ornare augue, at faucibus enim varius et. In
-pharetra libero eu ante porttitor viverra. Duis a purus eget enim venenatis
-porta a eget ante. Duis sed cursus risus, quis mattis purus. Aliquam ornare
-suscipit neque, at luctus nunc pulvinar vel. Donec venenatis auctor elit, non
-scelerisque diam.
-
-Maecenas cursus blandit mauris, et convallis eros aliquet ac. Maecenas imperdiet
-lectus sed arcu iaculis, non feugiat nulla rutrum. Duis pharetra suscipit tempor.
-Sed vulputate et metus ac rhoncus. Nullam scelerisque ante a velit scelerisque
-facilisis. Curabitur non odio magna. Suspendisse at euismod nunc, non scelerisque
-purus. Phasellus eget sem a felis tincidunt mollis nec ut sem. Fusce accumsan
-gravida elementum. Suspendisse dolor dui, pretium vitae vehicula at, commodo vel
-magna. Integer ligula nisl, placerat sit amet consectetur eu, ullamcorper ut
-nunc. Praesent commodo odio risus, vel ultrices risus dictum et. In vel elementum
-nisi. Suspendisse eget dui id diam porttitor dapibus. Aliquam eget vulputate enim,
-ut vulputate neque. 
+						<h3> Early Life </h3>
+						<p>Juan Ponce De Leon
+						was born in 1474 in Santervas De Campos, Spain. Santervas De Campos
+						was a very small hillside town with a population of only around 130!
+						Juan was born into a poor but noble family. Boys born into noble
+						family's had to learn to be knights, For this reason his parents sent
+						him to live and train with a nobleman named Don Pedro Nunez De
+						Guzman, Juan then began training to be a page. Over the years Juan
+						learned how to help Don Pedro prepare for battle. Juan was among the
+						crowds when the Moors were defeated, Now there would be no more need
+						for knights. Now Juan would have nothing to do. Little did he know
+						that there was someone could help him, his name was Christopher
+						Columbus. Juan Joined Christopher in September of 1493. Juan was
+						aboard One of Seventeen ships. They Passed and claimed several&nbsp;small
+						islands until landing on their final destination of Hispaniola on
+						November 18th. Columbus left 40 people on Hispaniola to settle years
+						ago, when he came back they we're all dead. The Spaniards pushed the
+						natives to work and search for gold. Juan quickly learned how hostile
+						Spaniards we're to the natives.
 						</p>
+						<h3>Hispanola and kids </h3>
+						<p>
+							Historians aren't sure what happened till 1502 in Juan's
+							life, they do know however he moved back to Spain. He
+							then met a man named Nicolas de Ovando who he sailed
+							back with to Hispaniola's capital Santos Domingo. The
+							Spaniards forced the natives to search for gold, which
+							eventually caused an uprising. Juan was sent to take
+							 the hostile Natives out, and he did. Nicolas de Ovando
+							 Granted him govenor and gave him 200 acres of land.
+							 Juan built a home and plantation there.In 1505 Juan
+							 later founded a town named "Salvaleon" Juan got married
+							 and had four kids in time, thier names were: Juana,
+							 Isabel, Maria, and Luis.
+						 </p>
+						   <h3> Puerto Rico and First Voyage </h3>
+						   <p>After years of
+  						 finding success in Hispaniola, Juan was edged by King Ferdinand and
+  						 the Spanish crown to search for more gold. Juan heard reports of an
+  						 island nearby called Puerto Rico, so Juan decided to look there. He
+  						 brought 50 men and a single ship, he landed where modern day San Juan
+  						 is. He then set up mines in Puerto Rico. A year later Juan went back
+  						 to Hispaniola to report his success. He brought his kids and wife to
+  						 Puerto Rico. He found more gold there and set up more gold mines.
+  						 Juan was believed to have had slaves, but treated them in a
+  						 relatively nonviolent way. In 1512, King Ferdinand pushed Juan to
+  						 look for new lands in hopes of finding more land for the Spanish
+  						 empire. Shortly after Juan heard story's of a mystical island called
+  						 Bimini, it was rumored to hold a Spring that could turn one to youth.
+  						 Juan set out for the island in 1513, he had three ships and more then
+  						 200 men, in a months time Juan Ponce de Leon landed on the east coast
+  						 of Florida (Modern day Saint Augustine). Juan hadn't realized this
+  						 was the mainland of America, Juan thought it was an island. He named
+  						 it Florida because of its vast vegetation, also because he landed
+  						 there near Easter Sunday. On the way back from Florida they found
+  						 Bimini, however, it had no special water.
+  						 </p>
+
+						 <h3> Last voyage and death </h3>
+						 <p>Juan left for Puerto
+ 						Rico after the discovery of Florida, when he returned to Puerto Rico
+ 						he found it in chaos, natives burnt down his house and settlement.
+ 						His family barely made it out alive. In 1514 he returned to Spain to
+ 						report on what he found. Juan was then named Military governor of
+ 						Puerto Rico and Florida. The Spanish crown ordered Juan to shut down
+ 						the Natives on Puerto Rico. Juan later learned that the king had
+ 						died, he hastily returned to Spain to Reclaim his titles and crowns.
+ 						Juan stayed in Spain for two years until he heard that Puerto Rico
+ 						was stable. In 1521 he Juan Ponce de Leon set off for a second voyage
+ 						and exploration. The crew soon landed on the western peninsula, where
+ 						they where attacked by natives, Juan was shot by a poison arrow to
+ 						his thigh. The crew quickly sailed to Cuba, where he then died in
+ 						July of 1521.</p>
 					</section>
 				</div>
 			</div>
-    </div>
-		</div>
+    	</div>
+	</div>
   </body>
 </html>
