added bib, added images

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   </head>
 	<body class="light serif loaded">
 	  	<div id="container" class="container font-size5">
-				<div style="display: block;" id="reader-header" class="header">
-	      <a href="#" id="reader-domain" class="domain">Histor Fair 2016</a>
-	      <div class="domain-border"></div>
-	      <h1 id="reader-title">Juan Ponce de Leon, Explorer and Govenor</h1>
-	      <div id="reader-credits" class="credits">Written by: Kyrin Van Jura</div>
+		<div style="display: block;" id="reader-header" class="header">
+	    <div class="domain-border"></div>
+	    <h1 id="reader-title">Juan Ponce de Leon, Explorer and Govenor</h1>
+	    <div id="reader-credits" class="credits">Written by: Kyrin Van Jura</div>
+		<center>
+		<img src="images/ponce.png" alt="Map" style="width:50%;">
+		</center>
 	    </div>
 			<div class="content">
 				<div style="display: block;" id="moz-reader-content">
@@ -55,6 +57,7 @@
 							 Isabel, Maria, and Luis.
 						 </p>
 						   <h3> Puerto Rico and First Voyage </h3>
+						   <img src="images/map.png" alt="Map" style="width:350px;height:270px;float:left;">
 						   <p>After years of
   						 finding success in Hispaniola, Juan was edged by King Ferdinand and
   						 the Spanish crown to search for more gold. Juan heard reports of an
@@ -95,6 +98,9 @@
 					</section>
 				</div>
 			</div>
+			<center>
+			<a href="https://docs.google.com/document/d/1BSMzqRUIpUMwDhDgwVjkThXzbYqXCqFAVxPeQz7R04I/edit?usp=sharing" id="reader-domain" class="domain">Bibliography</a>
+			</center>
     	</div>
 	</div>
   </body>
