--- a/index.html
+++ b/index.html
@@ -7,22 +7,23 @@
     <html lang="en-US">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="assets/main.css" />
+	<link rel="stylesheet" href="assets/zoom.css"/>
   </head>
 	<body class="light serif loaded">
 	  	<div id="container" class="container font-size5">
 		<div style="display: block;" id="reader-header" class="header">
-	    <div class="domain-border"></div>
-	    <h1 id="reader-title">Juan Ponce de Leon, Explorer and Govenor</h1>
-	    <div id="reader-credits" class="credits">Written by: Kyrin Van Jura</div>
-		<center>
-		<img src="images/ponce.png" alt="Map" style="width:50%;">
-		</center>
+		    <h1>Juan Ponce de León</h1>
+			<h2>Explorer and Governor</h2>
+		    <div class="credits">Created by: Kyrin Van Jura</div>
+			<center>
+			<img src="images/ponce.png" data-action="zoom" alt="Map" style="width:50%;">
+			</center>
 	    </div>
 			<div class="content">
 				<div style="display: block;" id="moz-reader-content">
 					<section class="entry-content clearfix">
 						<h3> Early Life </h3>
-						<p>Juan Ponce De Leon
+						<p>Juan Ponce De León
 						was born in 1474 in Santervas De Campos, Spain. Santervas De Campos
 						was a very small hillside town with a population of only around 130!
 						Juan was born into a poor but noble family. Boys born into noble
@@ -52,12 +53,12 @@
 							 the hostile Natives out, and he did. Nicolas de Ovando
 							 Granted him govenor and gave him 200 acres of land.
 							 Juan built a home and plantation there.In 1505 Juan
-							 later founded a town named "Salvaleon" Juan got married
+							 later founded a town named "SalvaLeón" Juan got married
 							 and had four kids in time, thier names were: Juana,
 							 Isabel, Maria, and Luis.
 						 </p>
 						   <h3> Puerto Rico and First Voyage </h3>
-						   <img src="images/map.png" alt="Map" style="width:350px;height:270px;float:left;">
+						   <img src="images/map.png" data-action="zoom" alt="Map" style="width:350px;height:270px;float:left;">
 						   <p>After years of
   						 finding success in Hispaniola, Juan was edged by King Ferdinand and
   						 the Spanish crown to search for more gold. Juan heard reports of an
@@ -72,7 +73,7 @@
   						 empire. Shortly after Juan heard story's of a mystical island called
   						 Bimini, it was rumored to hold a Spring that could turn one to youth.
   						 Juan set out for the island in 1513, he had three ships and more then
-  						 200 men, in a months time Juan Ponce de Leon landed on the east coast
+  						 200 men, in a months time Juan Ponce de León landed on the east coast
   						 of Florida (Modern day Saint Augustine). Juan hadn't realized this
   						 was the mainland of America, Juan thought it was an island. He named
   						 it Florida because of its vast vegetation, also because he landed
@@ -90,7 +91,7 @@
  						the Natives on Puerto Rico. Juan later learned that the king had
  						died, he hastily returned to Spain to Reclaim his titles and crowns.
  						Juan stayed in Spain for two years until he heard that Puerto Rico
- 						was stable. In 1521 he Juan Ponce de Leon set off for a second voyage
+ 						was stable. In 1521 he Juan Ponce de León set off for a second voyage
  						and exploration. The crew soon landed on the western peninsula, where
  						they where attacked by natives, Juan was shot by a poison arrow to
  						his thigh. The crew quickly sailed to Cuba, where he then died in
@@ -99,9 +100,18 @@
 				</div>
 			</div>
 			<center>
+			<!--FORMS GO HERE-->
+
+			<!--above this line-->
+			<div class="dropper">
 			<a href="https://docs.google.com/document/d/1BSMzqRUIpUMwDhDgwVjkThXzbYqXCqFAVxPeQz7R04I/edit?usp=sharing" id="reader-domain" class="domain">Bibliography</a>
+			</div>
 			</center>
     	</div>
 	</div>
+	<script src="assets/bootstrap.min.js"></script>
+	<script src="assets/jquery.min.js"></script>
+	<script src="assets/zoom.js"></script>
+	<script src="assets/transition.js"></script>
   </body>
 </html>
